--- a/gREM_ms_16072014_new.tex
+++ b/gREM_ms_16072014_new.tex
@@ -1,5 +1,5 @@
 \documentclass[a4paper,10pt,reqno,oneside]{amsart}
-\usepackage[small]{caption}
+\usepackage[footnotesize]{caption}
 %\usepackage[usenames,dvipsnames]{color}
 %\usepackage[colorlinks=TRUE,linkcolor=Black,urlcolor=Black,citecolor=Black,pagebackref=TRUE,]{hyperref} %Have to change href email.
 \usepackage{amsfonts,fancyhdr,graphicx,lastpage,rotating,multirow,fixltx2e, stfloats,txfonts,palatino,url,xcolor,multicol,hanging, setspace,lscape, paralist, changepage,subcaption,array,verbatim,setspace, siunitx,  flafter}
@@ -165,6 +165,7 @@ Starting from $x_1 = \frac{\pi}{2}$ until $\frac{\theta}{2} + \frac{\pi}{2} - \f
 
 %insert new figure
 \begin{figure}[t]
+\captionsetup{width=14cm}
         \centering
 	\begin{subfigure}[t]{60mm}
                 \centering
@@ -212,6 +213,8 @@ D = z/vt\bar{p}.
 
 
 %fix this @Tim
+
+
 gREM submodels differ discontinuously (figure 2) at differnt combinations of alpha and theta because the number and nature of intervals needed to describe the average profile width changes.  
 Examine the profile at $x_1 = 	\frac{\theta}{2} + \frac{\pi}{2}$ (the profile is perpendicular to the edge of the blind spot.) We see that there is potentially a case where the left side of the profile is $r\sin \frac{\alpha}{2}$ while the right side is zero. This profile does not exist if we return to the full $2r\sin \frac{\alpha}{2}$ profile before $x_1  = \frac{\theta}{2} + \frac{\pi}{2}$. Therefore we solve $\frac{5\pi}{2} - \frac{\theta}{2} - \frac{\alpha}{2} <  \frac{\theta}{2} + \frac{\pi}{2}$. We find that this new profile only exists if $ \alpha < 4\pi - 2 \theta$. This inequality defines the line separating models SE2 and its neighbouring model, SE3.
 
