--- a/gREM_ms_16072014_new.tex
+++ b/gREM_ms_16072014_new.tex
@@ -1,4 +1,10 @@
 \documentclass[a4paper,10pt,reqno,oneside]{amsart}
+
+
+% I'm really Confused!
+
+
+
 \usepackage[footnotesize]{caption}
 %\usepackage[usenames,dvipsnames]{color}
 %\usepackage[colorlinks=TRUE,linkcolor=Black,urlcolor=Black,citecolor=Black,pagebackref=TRUE,]{hyperref} %Have to change href email.
